LIFE-544 - Prediction status icon vertical alignement fix

--- a/css/less/livescore/rules/match-summary/ls-match-prediction.less
+++ b/css/less/livescore/rules/match-summary/ls-match-prediction.less
@@ -112,9 +112,6 @@
             line-height: @font-size-x-large;
             vertical-align: middle;
 
-            &.glyphicon{
-              vertical-align: baseline;
-            }
 
             &.icon-clock{
               font-size: @font-size-xx-large + 2px;
